--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,11 @@
 }
 
 .gs-img-effect{
-    filter: opacity(60%);
+    filter: opacity(50%);
     object-position: 50% 30% ;
 }
 
 .active{
-    filter: opacity(1);
+    filter: opacity(100%)!important;
     border: 3px solid rgb(207, 43, 43);  
 }
